# proving-gobang

./: .gitignore  CMakeLists.txt  INSTALL  README.md  STRATEGY.md  analyze.ipynb  pape_measure.ipynb  paper2.ipynb  predict.py  process_stats.py
app/: .gitignore  Dockerfile  INSTALL  app.py  requirements.txt
app/static/: scripts.js  socket.js
app/static/styles/: navigation.css  style.css
app/templates/: about.html  index.html  layout.html  play.html  rules.html
boards/: 4x10.txt  4x11.txt  4x7.txt  4x8.txt  4x9.txt  cross_board_6common.txt  cross_board_easy.txt  cross_board_easy01.txt  cross_board_easy02.txt  cross_board_easy03.txt  cross_board_easy04.txt  cross_board_easy05.txt  cross_board_easy06.txt  cross_board_onepad.txt  cross_board_plus_two_fields.txt  cross_board_twopad.txt  cross_board_twopad_licit.txt  cross_board_twopad_licit2.txt  cross_board_twopad_licit3.txt  cross_board_twopad_licit4.txt  cross_board_twopad_test01.txt  cross_board_twopad_weaken.txt  forbidden1.txt
papers/cog2021/: cog_reviews.txt  conference_101719.tex  gobang.bib  gobang_pns.tex
scripts/: draw_illustration.py  find_turning_potential.py  generate_side_rules.py  predict.py  search_start_pos.py
src/: DFPN.cpp  MCTS.cpp  MCTS.h  PNS.cpp  PNS.h  PNS_square.cpp  artic_point.cpp  artic_point.h  board.cpp  board.h  canonicalorder.h  common.cpp  common.h  common_strategy.cpp  common_strategy.h  counter.cpp  counter.h  gobanggame.h  heuristic.cpp  heuristic.h  licit.h  logger.cpp  logger.h  main.cpp  node.cpp  node.h  parallel.cpp  parallel.h  params.h  play.cpp  play.h  tree.h
src/unused/: CMakeLists_.txt  MCTS.cpp
test/: PARALLEL.py  PLAY  main.cpp  measure.sh  measure_both.sh  nauty.cpp  paper.py  parallel.sh  test.cpp
